--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.corelogic.clp.starters</groupId>
+  <groupId>com.corelogic.clp.starters.profile</groupId>
   <artifactId>clp-profile-service-starter</artifactId>
   <version>3.1.3</version>
 
